# clog

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
src/lib/: CMakeLists.txt  clog.c  clog.h  clog_config.h.in  threadingStrategy.c
tests/: CMakeLists.txt  testCallbacks.c  testFormat.c  testLevels.c  testPthread.c
